fixed box sizing and overflow issues for sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
 }
 
+
+
 .App {
   background-color: white;
   text-align: center;
@@ -19,20 +21,6 @@
   grid-area: calendars;
   margin: 10px;
   border-radius: 4px;
-
-}
-
-#sidebar{
-  grid-area: sidebar;
-  background-color: #eee;
-  position: fixed;
-  margin: 0;
-  height: 100vh;
-  width: 300px;
-  -webkit-box-shadow: 0px 10px 42px 2px rgba(118,122,128,1);
-  -moz-box-shadow: 0px 10px 42px 2px rgba(118,122,128,1);
-  box-shadow: 0px 10px 42px 2px rgba(118,122,128,1);
-  overflow: scroll;
 }
 
 /*#shortlist {
