--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,3 +1,14 @@
-#sidebar {
+
+
+#sidebar{
+  grid-area: sidebar;
   background-color: white;
+  position: fixed;
+  margin: 0;
+  height: 100vh;
+  width: 300px;
+  -webkit-box-shadow: 0px 10px 42px 2px rgba(118,122,128,1);
+  -moz-box-shadow: 0px 10px 42px 2px rgba(118,122,128,1);
+  box-shadow: 0px 10px 42px 2px rgba(118,122,128,1);
+  overflow: auto;
 }
